--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-# protobuf
+protobuf
 transformers==4.30.2
 # cpm_kernels
 torch>=2.0
-# gradio
-# mdtex2html
-# sentencepiece
-# accelerate
+sentencepiece
+accelerate
 sse-starlette
 pydantic
 uvicorn
 fastapi
+openai
